[metadata]
name = radiometer-lcmtypes
description = LCM types library for the Future Ocean Lab radiometer
long_description = file: README.md
keywords = LCM, radiometer
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires = setuptools_scm

[options.package_data]
* = *.txt, *.rst, *.md
