[metadata]
name = radiometer_lcmd
description = LCM daemon & types library for the Future Ocean Lab radiometer
long_description = file: README.md
keywords = LCM, radiometer
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
zip_safe = False
include_package_data = True
setup_requires = setuptools_scm

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.rst, *.md
